fix text blurriness

--- a/src/components/game-ui/episode/style.css
+++ b/src/components/game-ui/episode/style.css
@@ -37,5 +37,4 @@
 
 .currentScene {
   opacity: 0;
-  filter: blur(10px);
 }
